...

          <form onSubmit={handleSubmit(onSubmit)} noValidate>
            <VStack gap={4}>
              {/* Name row */}
              <Flex gap={3} w="full">
                <Box flex={1}>
                  <FieldLabel htmlFor="first_name">First name</FieldLabel>
                  <InputRow icon={<FiUser size={14} />} hasError={!!errors.first_name}>
                    <Controller
                      name="first_name"
                      control={control}
                      render={({ field }) => (
                        <Input
...
                      )}
                    />
                  </InputRow>
                  <FieldError msg={errors.first_name?.message} />
                </Box>
                <Box flex={1}>
                  <FieldLabel htmlFor="last_name">Last name</FieldLabel>
                  <InputRow icon={<FiUser size={14} />} hasError={!!errors.last_name}>
                    <Controller
                      name="last_name"
                      control={control}
                      render={({ field }) => (
                        <Input
...
